Fixed StayPreview overflow

--- a/src/assets/styles/cmps/StayList.scss
+++ b/src/assets/styles/cmps/StayList.scss
@@ -3,27 +3,8 @@
     padding: 0;
     margin: 0;
     display: grid;
-    // grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    // grid-gap: 20px;
-    // display: grid;
     grid-gap: 40px 24px;
-
-    @include for-mobile-layout {
-      grid-template-columns: repeat(1, 1fr);
-    }
-    @include for-list-layout {//change
-      grid-template-columns: repeat(2, 1fr);
-    }
-    @include for-tablet-layout {
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    @include for-normal-layout {
-      grid-template-columns: repeat(4, 1fr);
-    }
-    @include for-wide-layout {
-      grid-template-columns: repeat(6,1fr)
-  }
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   }
 
 }
